# privacy-rag-onprem

./: .cursorrules  .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
prompts/: clinical_rag.py
scripts/: download_models.py  evaluate_bioasq.py  ingest_drugbank.py  ingest_pubmed.py
src/: __init__.py  models.py  pipeline.py
src/api/: auth.py  deps.py  main.py  routes.py
src/audit/: __init__.py  logger.py
src/chunking/: __init__.py  chunker.py
src/embedding/: __init__.py  embedder.py
src/filtering/: __init__.py  hallucination_checker.py  phi_scanner.py
src/inference/: __init__.py  base.py  ollama_client.py  vllm_client.py
src/ingestion/: __init__.py  deidentifier.py  loader.py  parser.py
src/retrieval/: __init__.py  hybrid.py  reranker.py
src/vectorstore/: __init__.py  base.py  bm25_store.py  qdrant_store.py
tests/: conftest.py  test_api.py  test_chunker.py  test_phi_detection.py  test_pipeline.py  test_retrieval.py
